--- a/assets/sass/components/_menu.scss
+++ b/assets/sass/components/_menu.scss
@@ -59,7 +59,7 @@
     @include align-items(center);
     @include themify($themes) {
       color: themed('body-color');
-      
+
       @include on-event {
         color: themed('no-active-font-color');
       }
@@ -92,7 +92,7 @@
       &[data-depth="4"] {
         margin-left: 3.5rem;
       }
-      
+
       @include no-select;
       @include flexbox();
       @include align-items(center);
@@ -160,7 +160,7 @@
     max-height: 0;
     overflow: hidden;
     word-wrap: break-word;
-    
+
     @include transition();
 
     li {
@@ -205,7 +205,7 @@
   li.active {
     @include themify($themes) {
       a {
-        font-weight: bold;
+        font-weight: Bold;
       }
     }
   }
