--- a/assets/sass/themes/_dark.scss
+++ b/assets/sass/themes/_dark.scss
@@ -7,7 +7,7 @@ $dark: (
   subtitle-color: darken(#FCFCFA, 5%),
   border-line-color: rgba(243, 242, 241, 0.1),
   active-font-color: $dark-active-font-color,
-  body-background-color: #2D2A2E,
+  body-background-color: #2B2A2E,
   back-background-color: #212121,
   navbar-background-color: #403E41,
   navbar-hover-background-color: rgba(225,225,225,0.4),
@@ -37,13 +37,13 @@ $dark: (
   pagination-link-color: #82aaff,
   pagination-disabled-color: #757575,
   pagination-number-color: #FCFCFA,
-  breadcrumb-background-color: #2D2A2E,
+  breadcrumb-background-color: #2B2A2E,
   single-hr-background-color: #727072,
   single-blockquote-border-color: #FCFCFA,
   single-contents-title-color: #FCFCFA,
   single-header-title-background-color: #212121,
   single-contents-subtitle-color: #FCFCFA,
-  expand-background-color: darken(#2D2A2E, 2%),
+  expand-background-color: darken(#2B2A2E, 2%),
   expand-background-color-hover: #212121,
   tag-num-background-color: #595B5C,
   tag-text-background-color: #595B5C,
