--- a/layouts/partials/main/single.html
+++ b/layouts/partials/main/single.html
@@ -2,7 +2,7 @@
 
 <div class="mid">
   <div class="divider">
-    
+
     <nav id="single-menu" class="l" data-dir="{{ $.Param "languagedir" | default "ltr" }}">
       {{ if $.Param "enableMenu" }}
         {{ partial "main/sections/single-menu.html" . }}
@@ -11,10 +11,12 @@
 
     <article id="list-main" class="{{ if $wideViewAsDefault }}mr{{ else }}m{{ end }}" data-dir="{{ $.Param "languagedir" | default "ltr" }}">
       {{ partial "main/sections/list-main.html" . }}
+      {{ partial "quartz/graph.html" . }}
+      {{ partial "quartz/backlinks.html" . }}
       {{ partial "main/component/pagination-single.html" . }}
       {{ partial "comments/comments.html" . }}
     </article>
-    
+
     <section id="list-side" class="{{ if $wideViewAsDefault }}hide{{ else }}r{{ end }}" data-dir="{{ $.Param "languagedir" | default "ltr" }}">
       {{ if $.Param "enableToc" }}
         {{ partial "main/component/toc.html" . }}
@@ -33,11 +35,11 @@
   var singleMenu = document.getElementById('single-menu');
   var switchElem = document.querySelector('.switch');
   var wideViewAsDefault = JSON.parse({{ $wideViewAsDefault | jsonify }});
-  
+
   enquire.register("screen and (max-width:1280px)", {
     match: function () {
       if (wideViewAsDefault) {
-        singleMenu.className = 'l';  
+        singleMenu.className = 'l';
         listMain.className = 'mr';
         listSide.className = 'hide';
       } else {
