--- a/assets/sass/pages/_single.scss
+++ b/assets/sass/pages/_single.scss
@@ -223,8 +223,9 @@
       margin-right: 0;
       margin-top: 0;
       margin-bottom: 1rem;
+      margin-left: 1rem;
       padding: 0;
-      list-style: disc outside none;
+      list-style: disc inside none;
     }
 
     ol {
