--- a/layouts/partials/quartz/backlinks.html
+++ b/layouts/partials/quartz/backlinks.html
@@ -2,16 +2,19 @@
 <ul class="backlinks">
     {{$url := urls.Parse .Site.BaseURL }}
     {{$host := strings.TrimRight "/" $url.Path }}
-    {{$curPage := strings.TrimPrefix $host (strings.TrimRight "/" .Page.RelPermalink) }}
-    {{$inbound := index $.Site.Data.linkIndex.index.backlinks $curPage}}
+    {{$curPage := strings.TrimPrefix $host (strings.TrimRight "/" .Page.RelPermalink)}}
+    {{$linkIndex := getJSON "/assets/indices/linkIndex.json"}}
+    {{$inbound := index $linkIndex.index.backlinks $curPage}}
+    {{$contentTable := getJSON "/assets/indices/contentIndex.json"}}
     {{if $inbound}}
-    {{- range $inbound -}}
-        {{$src := index . "source"}}
-        {{$src = replace $src " " "-"}}
-
-        <li>
-            <a href="{{$src}}">{{index . "source"}}</a>
-        </li>
+    {{$cleanedInbound := apply (apply $inbound "index" "." "source") "replace" "." " " "-"}}
+    {{- range $cleanedInbound | uniq -}}
+      {{$l := printf "%s%s" $host .}}
+      {{with (index $contentTable .)}}
+      <li>
+          <a href="{{$l}}">{{index (index . "title")}}</a>
+      </li>
+      {{end}}
     {{- end -}}
     {{else}}
     <li>
