--- a/layouts/partials/main/sections/list-section.html
+++ b/layouts/partials/main/sections/list-section.html
@@ -1,13 +1,4 @@
 {{ $.context.Content }}
 <div class="list-section">
-  {{ range .section_to_display }}
-    <div class="list-section__item">
-      <a href="{{ .Permalink }}" class="list-section__item--link">
-        {{ .Title }}
-      </a>
-      <div class="list-section__item--desc">
-        {{ .Description }}
-      </div>
-    </div>
-  {{ end }}
-  </div>
+  {{ .Content }}
+</div>
