--- a/layouts/partials/main/single.html
+++ b/layouts/partials/main/single.html
@@ -1,4 +1,8 @@
 {{ $wideViewAsDefault := ($.Param "wideViewAsDefault") }}
+<script type="text/javascript"
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
+
 
 <div class="mid">
   <div class="divider">
